css/styles.css
/*Common styles*/

* {
	border: 0;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

a {
	text-decoration: none;
	color: inherit;
}

img, embed, video, object {
	max-width: 100%;
}


/*Custom styles*/


/*Elements*/

html, body {
	width: 100%;
	color: #2d3c49;
	font-family: sans-serif;
	background: linear-gradient(0deg,hsla(0,14%,97%,.8),hsla(0,14%,97%,.8)),url('../img/back[small].jpg');
	background-position: center;
}

header {
	background-color: #455A64;
}

h1, h2, h4 {
	font-weight: normal;
}

h1 {
	font-size: 2.3em;
}

h4 {
	font-size: 1.15em;
}

h2 {
	font-size: 25px;
	text-align: center;
	margin: 10px;
}

div > hr {
	border-top: 1px solid #7d97ad;
	width: 100%;
	margin-bottom: 20px;
}

main {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	width: 95%;
	margin: auto;
}

section {
	margin-top: 30px;
	margin-bottom: 40px;
}

section a {
	display: flex;
	align-items: center;
}

section img {
	transition: all 0.2s ease-in-out;
}

section img:hover {
	transform: scale(1.1);
	z-index: 1000;
}

section p {
	transform: rotate(90deg);
	text-align: center;
	font-family: 'Niramit', sans-serif;
	font-size: 20px;
	line-height: 25px;
	position: relative;
}

section hr {
	border-left: 1px solid #7d97ad;
	margin-left: 10px;
	height: 168px;
}

footer {
	display: flex;
	flex-flow: column nowrap;
	align-items: flex-end;
}


/*Classes*/

.container {
	width: 100%;
	padding: 0 10px 0 10px;
	margin-bottom: 10px;
	box-shadow: 2px 2px 3px 5px #ccc;
	background: radial-gradient(rgba(250,250,250,0.8), transparent);

}

.container-1 {
	height: 55vh;
	display: flex;
	flex-flow: column nowrap;
	justify-content: flex-end;
	align-items: center;
	padding-bottom: 20px;
	margin-bottom: 10px;
	color: white;
}

.logo {
	padding-bottom: 7px;
}

.logo img {
	width: 120px;
	border-radius: 50%;
}

.title {
	text-align: center;
}

.heading {
	color: #364851;
	width: 100%;
	display: flex;
	flex-wrap: nowrap;
	align-items: center;
}

.work {
	width: 80%;
	height: 100%;
	border-radius: 50px 0;
}

.container-2 {
	width: 50vw;
	display: flex;
	flex-flow: row wrap;
	margin: 10px;
	justify-content: flex-end;
}

.social {
	margin-left: 20px;
	width: 25px;
	flex-grow: 1;
	max-width: 35px;
	max-height: 35px;
}

.social:first-of-type {
	margin: 0;
}

.copyright {
	width: 100%;
	margin-top: 10px;
	text-align: right;
	font-size: 4vw;
	color: #B3B3B3;
}


/*IDs*/

#quote {
	border-radius: 10px;
}

#ft-work {
	width: 95%;
	display: flex;
	flex-flow: column nowrap;
}

#memory, #arcade {
	right: 30px;
}

#reader {
	right: 20px;
}

#review {
	right: 45px;
}


/*Media Queries*/

@media screen and (max-width: 359px) {
	.container-2 {
		width: 100%;
	}
	.social {
		max-width: 25px;
		max-height: 25px;
	}
}

@media screen and (min-width: 460px) {
	.logo img {
		width: 100px;
		margin-bottom: 10px;
	}

	.title {
		margin-bottom: 10px;
	}

	h1 {
		font-size: 2.2em;
	}
	h4 {
		font-size: 1.2em;
	}

	h2 {
		font-size: 30px;
	}

	section hr {
		height: 200px;
	}

	section p {
		font-size: 25px;
	}

	#review {
		right: 52px;
	}
}

@media screen and (min-width: 600px) {
	.logo img {
		width: 115px;
	}

	h1 {
		font-size: 2.4em;
	}
	h4 {
		font-size: 1.4em;
	}

	h2 {
		font-size: 34px;
	}

	section hr {
		height: 265px;
	}

	section p {
		font-size: 28px;
	}

	#review {
		right: 58px;
	}
}

@media screen and (min-width: 700px) {
	header {
		background-color: #6A1B9A;
	}

	.logo img {
		width: 180px;
		position: relative;
		right: 30vw;
	}

	.title {
		align-self: flex-end;
		position: relative;
		right: 5vw;
		text-align: right;
		font-family: 'Montserrat', sans-serif;

	}

	h1 {
		font-size: 3.3em;
	}

	h4{
		font-size: 1.9em;
	}

	#quote {
		width: 700px;
	}

	#ft-work {
		padding: 0 10px 0 10px;
		width: 100%;
		flex-flow: row wrap;
	}

	.heading {
		width: 100%;
		margin-bottom: 35px;
	}

	h2 {
		font-size: 2.4em;
	}

	section {
		width: 50%;
		margin-top: 10px;
	}

	section a {
		flex-flow: column nowrap;
		align-items: flex-start;
	}

	.work {
		width: 95%;
		height: 230px;
		transform: skew(-6deg);
	}

	section hr {
		width: 70%;
		height: 1px;
		border-top: 1px solid #7d97ad;
		border-left: 0;
		align-self: flex-start;
		margin: 20px 0 15px 0;
	}

	section p {
		transform: rotate(0);
		text-align: left;
	}

	#memory, #arcade, #reader, #review {
		left: 0;
		right: 0;
	}

	.copyright {
		font-size: 3vw;
	}
}

@media screen and (min-width: 1000px) {
	header {
		background-color: #2C3D44;
	}

	.container-1 {
		width: 90vw;
		margin:auto;
		height: auto;
		padding-bottom: 0;
		flex-flow: row nowrap;
		justify-content: space-between;
		align-items: center;
	}

	.logo {
		padding: 0;
	}

	.logo img {
		width: 100px;
		margin: 0;
		left: 0;
		right: 0;
		padding: 10px;
	}

	.title {
		align-self: center;
		margin: 0;
		right: 0;
	}

	h1 {
		font-size: 2.5em;
	}

	h4{
		font-size: 1.3em;
	}

	.container {
		width: 90vw;
		margin: auto;
		box-shadow: 0 0 0 0;
		padding: 0;
	}

	article {
		align-self: flex-end;
		margin: 35px 0 15px 0;
	}

	#quote {
		width: 850px;
	}

	#ft-work {
		padding: 0;
		justify-content: space-between;
	}

	div > hr {
		display: none;
	}

	h2 {
		margin-left: 0;
	}

	section {
		width: 32%;
	}

	.work {
		width: 100%;
		transform: skew(0);
		box-shadow: 3px 3px 7px 3px #ccc;
		border-radius: 5px;
	}

	footer {
		width: 90vw;
		margin: auto;
	}

	.copyright {
		font-size: 25px;
	}
}

@media screen and (min-width: 1200px) {
	.container, .container-1, .container-2 {
		width: 1200px;
		margin: auto;
		padding: 0 50px;
	}

	#arcade {
		width :90%;
	}
}

